@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.zouzounia.tv" name="Zouzounia TV" version="3.0.1" provider-name="Twilight0">
     <requires>
-        <import addon="xbmc.python" version="2.24.0"/>
+        <import addon="xbmc.addon" version="16.1.000"/>
         <import addon="plugin.video.youtube" version="6.8.2"/>
-        <import addon="script.module.tulip" version="2.5.11"/>
+        <import addon="script.module.tulip" version="2.8.1"/>
     </requires>
     <extension point="xbmc.python.pluginsource" library="addon.py">
         <provides>video</provides>
@@ -18,7 +18,11 @@
         <license>GNU GPL, version 3</license>
         <website>https://www.youtube.com/channel/UCzsQf6eiWz4gIHgx0oYadXA</website>
     </extension>
-    <news>29-06-2020 - [B]3.0.0[/B]
+    <news>28-12-2020 - [B]3.1.0[/B]
+- Updated youtube api key
+- Bumped dependencies
+
+29-06-2020 - [B]3.0.0[/B]
 - Addon rework
 - New youtube api keys
 - Removed third party content
